Bug#44295 SSL connection fails on bigendian